Reviewed pt_BR translations.

--- a/usr/share/live-installer/slideshow/l10n/pt_BR/about.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/about.html
@@ -1,9 +1,9 @@
-<div class="header"><h1 class="slidetitle">Sobre Bodhi</h1></div>
+<div class="header"><h1 class="slidetitle">Sobre o Bodhi</h1></div>
 
 <div class="main">
   <div class="text">
     <div>
-      <p>	Acreditamos fortemente no minimalismo e escolhas do usu&aacute;rio, portanto voc&ecirc; somente ver&aacute; algumas ferramentas como padr&atilde;o.</br></br>Tudo o mais que voc&ecirc; precisar pode ser facilmente instalado usando nosso AppCenter.</br></br> O Bodhi Linux usa o Moksha Desktop Environment, que fornece um sistema operacional leve e bonito, e que voc&ecirc; ainda pode estilizar do jeito que voc&ecirc; quiser.</p>
+      <p>Acreditamos fortemente no minimalismo e escolhas do usu&aacute;rio, portanto voc&ecirc; somente ver&aacute; algumas ferramentas b&aacute;sicas como padr&atilde;o.</br></br>O Bodhi Linux usa o Moksha Desktop Environment, que fornece um sistema operacional leve e bonito, e que voc&ecirc; ainda pode estilizar do jeito que voc&ecirc; quiser.</br></br>Com o Moksha voc&ecirc; pode criar sua pr&oacute;pria experi&ecirc;ncia estilosa e personalizada de desktop Linux.</p>
     </div>
   </div>
   <img class="screenshot" src="screenshots/welcome.png" />
