--- a/usr/share/live-installer/slideshow/l10n/pt_BR/appcenter.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/appcenter.html
@@ -3,7 +3,7 @@
 <div class="main">
   <div class="text">
     <div>
-      <p>A maneira mais f&aacute;cil de adicionar novos softwares ao seu sistema &eacute; usando nosso AppCenter. Instale software com um clique do mouse.</p>
+      <p>O Bodhi Linux AppCenter &eacute; uma maneira simplificada de encontrar apps bacanas para o Bodhi. Instale software com um clique do mouse.</p>
     </div>
 
     <div class="featured">
