--- a/usr/share/live-installer/slideshow/l10n/pt_BR/community.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/community.html
@@ -4,7 +4,7 @@
   <div class="text">
     <div>
       <ul>
-        <li>Se voc&ecirc; n&atilde;o encontrar a solu&ccedil;&atilde;o para um problema que voc&ecirc; tenha em nossa documenta&ccedil;&atilde;o, nada tema. N&oacute;s temos um forum bastante ativo onde voc&ecirc; pode pedir ajuda. Nossos membros s&atilde;o amig&aacute;veis e tentar&atilde;o resolver os problemas com voc&ecirc;.</li></br>
+        <li>Se voc&ecirc; n&atilde;o encontrar a solu&ccedil;&atilde;o para um problema que voc&ecirc; tenha em nossa documenta&ccedil;&atilde;o, nada tema. N&oacute;s temos um forum bastante ativo onde voc&ecirc; pode pedir ajuda ou simplesmente visitar. Nossos membros s&atilde;o amig&aacute;veis e tentar&atilde;o resolver os problemas com voc&ecirc;.</li></br>
         <li>Junte-se &agrave; comunidade e descubra que lugar legal!</li>
       </ul>
     </div>
