--- a/usr/share/live-installer/slideshow/l10n/pt_BR/documentation.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/documentation.html
@@ -4,9 +4,10 @@
   <div class="text">
     <div>
       <ul>
-	<li>Quando voc&ecirc; iniciou o Bodhi voc&ecirc; viu o nosso guia de inicializa&ccedil;&atilde;o r&aacute;pida (Quickstart Guide), que foi pensado para te apresentar ao Bodhi.</li></br>
-	<li>Al&eacute;m deste guia de inicializa&ccedil;&atilde;o r&aacute;pida n&oacute;s temos nossa documenta&ccedil;&atilde;o wiki, uma rica fonte de informa&ccedil;&otilde;es.</li>
-      </ul>
+    <li>Quando voc&ecirc; iniciou o Bodhi voc&ecirc; viu o nosso guia de inicializa&ccedil;&atilde;o r&aacute;pida (Quickstart Guide), que foi pensado para te apresentar ao Bodhi.</li></br>
+    <li>Al&eacute;m deste guia de inicializa&ccedil;&atilde;o r&aacute;pida n&oacute;s temos nossa documenta&ccedil;&atilde;o wiki, uma rica fonte de informa&ccedil;&otilde;es.</li>
+    <li>Muitas aplica&ccedil;&otilde;es espec&iacute;ficas do Bodhi t&ecirc;m op&ccedil;&otilde;es de ajuda ou <i>man pages</i> que podem ser acessadas a partir do terminal.</li>
+  </ul>
     </div>
   </div>
 <img class="screenshot" src="screenshots/help.png" />
