--- a/usr/share/live-installer/slideshow/l10n/pt_BR/welcome.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/welcome.html
@@ -3,7 +3,7 @@
 <div class="main">
  <div class="text">
     <div>
-      <p>Bem-vindo(a)! A Comunidade do Bodhi Linux tem agradecimento por você escolher o sistema operacional. Ele está sendo instalado. A apresentação de slides irá mostrar o que ele tem.</p>
+      <p>Bem-vindo(a) e obrigado por escolher o Bodhi Linux. Esta apresentação de slides irá apresentar o sistema a você enquanto ele é instalado no seu computador.</p>
    </div>
   </div>
   <img class="screenshot" src="screenshots/welcome.png" />
