--- a/usr/share/live-installer/slideshow/l10n/pt_BR/web.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/web.html
@@ -3,10 +3,10 @@
 <div class="main">
   <div class="text">
     <div>
-      <p>Seja rápido e seguro na web com o Chromium. Assista seus programas favoritos no Netflix e no YouTube.</p>
+      <p>Seja rápido e esteja seguro na web com o Chromium. Assista seus programas favoritos no Netflix e no YouTube.</p>
     </div>
     <div class="featured">
-      <h2 class="subtitle">Featured software and services</h2>
+      <h2 class="subtitle">Software e servi&ccedil;os em destaque</h2>
       <ul>
         <li>
         <img class="icon" src="icons/chromium.png" />
