Slovak locale revision

--- a/usr/share/live-installer/slideshow/l10n/sk/about.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/about.html
@@ -3,7 +3,7 @@
 <div class="main">
   <div class="text">
     <div>
-      <p>Nakoľko veríme v minimalizáciu a užívateľskú slobodu výberu, distribúcia ponúka len niekoľko nainštalovaných nástrojov. </br></br>Bodhi Linux používa prostredie Moksha Desktop, ktoré ponúka nenáročný a úhľadný operačný systém prispôsobiteľný Vaším predstavám.</p>
+      <p>Nakoľko veríme v minimalizáciu a užívateľskú slobodu výberu, distribúcia ponúka len niekoľko predinštalovaných aplikácií. </br></br>Bodhi Linux používa prostredie Moksha Desktop, ktoré ponúka nenáročný a úhľadný operačný systém prispôsobiteľný Vaším predstavám.</p>
     </div>
   </div>
   <img class="screenshot" src="screenshots/welcome.png" />
