--- a/usr/share/live-installer/slideshow/l10n/sk/welcome.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/welcome.html
@@ -3,7 +3,7 @@
 <div class="main">
  <div class="text">
     <div>
-      <p>Vitajte a ďakujeme, že ste si vybrali Bodhi Linux. Táto prezentácia vám ukáže, kým sa systém inštaluje na váš počítač.</p>
+      <p>Vitajte a ďakujeme, že ste si vybrali Bodhi Linux. Táto prezentácia Vás prevedie, kým sa systém nainštaluje na Váš počítač.</p>
    </div>
   </div>
   <img class="screenshot" src="screenshots/welcome.png" />
