--- a/usr/share/live-installer/slideshow/l10n/sk/donations.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/donations.html
@@ -6,7 +6,7 @@
       <ul>
         <li>Bodhi Linux nie je organizácia vykazujúca zisk. Sme partia nadšencov a dobrovoľníkov z celého sveta.</li></br>
         <li>Aj Vy nám môžete pomôcť udržiavať vývoj distribúcie pomocou príspevku.</li></br>
-        <li>Pre viac informácií ohľadom príspevkov a členstva, navštívte našu stránku.</li>
+        <li>Pre viac informácií ohľadom príspevkov a členstva navštívte našu stránku.</li>
       </ul>
     </div>
   </div>
