Slovak locale revision v2

--- a/usr/share/live-installer/slideshow/l10n/sk/documentation.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/documentation.html
@@ -4,7 +4,7 @@
   <div class="text">
     <div>
       <ul>
-        <li>Nezabudnite si pozrieť našu príručku pre rýchly štart, ktorá je navrhnutá tak, aby vám pomohla začať používať Bodhi.</li></br>
+        <li>Nezabudnite si pozrieť našu "rýchlu" príručku, ktorá je navrhnutá tak, aby Vám pomohla začať používať Bodhi.</li></br>
         <li>Taktiež je k dispozícii online dokumentácia, plná užitočných informácií.</li></br>
         <li>Mnoho aplikácií špecifických pre Bodhi má možnosti pomoci alebo manuálové stránky, ku ktorým je možné pristupovať cez terminál./li>
       </ul>
