--- a/usr/share/live-installer/slideshow/l10n/sk/web.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/web.html
@@ -3,7 +3,7 @@
 <div class="main">
   <div class="text">
     <div>
-      <p>Buďte na webe rýchly a bezpečný s prehliadačom Chromium. Pozerajte vaše obľúbené
+      <p>Buďte na webe rýchly a bezpečný s prehliadačom Chromium. Pozerajte Vaše obľúbené
 videá na Netflixe a Youtube.</p>
     </div>
     <div class="featured">
