Pics link added to htmls

--- a/usr/share/live-installer/slideshow/about.html
+++ b/usr/share/live-installer/slideshow/about.html
@@ -6,5 +6,5 @@
       <p>We strongly believe in minimalism and user choice, therefore Bodhi only comes with the basics out of the box.</br></br>Bodhi Linux uses the Moksha Desktop Environment which gives you a lightweight, beautiful, and highly customizable operating system.</br></br>With Moksha you can create your own stylish, personalized Linux desktop experience.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
