Update img links in en HTML

--- a/usr/share/live-installer/slideshow/appcenter.html
+++ b/usr/share/live-installer/slideshow/appcenter.html
@@ -28,5 +28,5 @@
       </ul>
     </div>
   </div>
-<img class="screenshot" src="screenshots/software.png" />
+<img class="screenshot" src="screenshots/appcenter.png" />
 </div>
