--- a/usr/share/live-installer/slideshow/l10n/sk/about.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/about.html
@@ -6,5 +6,5 @@
       <p>Nakoľko veríme v minimalizáciu a užívateľskú slobodu výberu, distribúcia ponúka len niekoľko predinštalovaných aplikácií. </br></br>Bodhi Linux používa prostredie Moksha Desktop, ktoré ponúka nenáročný a úhľadný operačný systém prispôsobiteľný Vaším predstavám.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
