pt_BR and ru pics links updated

--- a/usr/share/live-installer/slideshow/l10n/pt_BR/about.html
+++ b/usr/share/live-installer/slideshow/l10n/pt_BR/about.html
@@ -6,5 +6,5 @@
       <p>Acreditamos fortemente no minimalismo e escolhas do usu&aacute;rio, portanto voc&ecirc; somente ver&aacute; algumas ferramentas b&aacute;sicas como padr&atilde;o.</br></br>O Bodhi Linux usa o Moksha Desktop Environment, que fornece um sistema operacional leve e bonito, e que voc&ecirc; ainda pode estilizar do jeito que voc&ecirc; quiser.</br></br>Com o Moksha voc&ecirc; pode criar sua pr&oacute;pria experi&ecirc;ncia estilosa e personalizada de desktop Linux.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
