--- a/usr/share/live-installer/slideshow/l10n/ru/web.html
+++ b/usr/share/live-installer/slideshow/l10n/ru/web.html
@@ -1,4 +1,4 @@
-<div class="header"><h1 class="slidetitle">Пользуйтесь Интернетом/h1></div>
+<div class="header"><h1 class="slidetitle">Пользуйтесь Интернетом</div>
 
 <div class="main">
   <div class="text">
