pt, nl, he  pics links updated

--- a/usr/share/live-installer/slideshow/l10n/he/about.html
+++ b/usr/share/live-installer/slideshow/l10n/he/about.html
@@ -10,5 +10,5 @@
     </ul>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
