--- a/usr/share/live-installer/slideshow/l10n/pt/about.html
+++ b/usr/share/live-installer/slideshow/l10n/pt/about.html
@@ -6,5 +6,5 @@
       <p>Acreditamos fortemente no minimalismo e nas escolhas do utilizador, por isso o bodhi vem apenas com o básico pré-instalado. .</br></br>O Bodhi Linux usa o ambiente gráfico Moksha, que lhe fornece um sistema operativo leve, bonito e altamente personalizável.</br></br>Com o Moksha pode criar a sua própria experiência do ambiente de trabalho Linux, elegante e personalizada.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
