--- a/usr/share/live-installer/slideshow/l10n/nl/about.html
+++ b/usr/share/live-installer/slideshow/l10n/nl/about.html
@@ -6,5 +6,5 @@
       <p>Wij geloven in minimalisme en keuzevrijheid; daarom bevat Bodhi standaard alleen de basisdingen.</br></br>Bodhi Linux heeft de werkomgeving Moksha, die u een lichtgewicht, mooi en zeer aanpasbaar besturingssysteem biedt.</br></br>Met Moksha kunt u uw eigen stijlvolle, gepersonaliseerde Linuxervaring tot stand brengen.</li></p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
