el, es, fr pics links updated

--- a/usr/share/live-installer/slideshow/l10n/el/about.html
+++ b/usr/share/live-installer/slideshow/l10n/el/about.html
@@ -6,5 +6,5 @@
       <p>Πιστευουμε ακραδαντα στο μινιμαλισμο και την ευκολια στο χρηστη , γιαυτο και θα βρειτε μονο τις απαραιτητες εφαρμογες , οτιδηποτε αλλο μπορειτε να το εγκαταστησετε μεσα απο το AppCenter.</br></br>To bodhi linux ερχεται με το Moksha σαν περιβαλλον , το οποιο μας δινει ενα γρηγορο , ομορφο και πληρως διαχειρισιμο εμφανισιακα λειτουργικο συστημα.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
