--- a/usr/share/live-installer/slideshow/l10n/es/about.html
+++ b/usr/share/live-installer/slideshow/l10n/es/about.html
@@ -6,5 +6,5 @@
 	  <p>Nosotros creemos en el minimalismo y que sea el usuario quien tome sus propias decisiones, por eso aquí sólo tendrás unas pocas herramientas preinstaladas.</br></br>Bodhi Linux usa el entorno de escritorio Moksha, lo que te permitirá tener un sistema operativo ligero y bello que puedes estilizar tanto como tú quieras.</p>
    </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
