--- a/usr/share/live-installer/slideshow/l10n/es/appcenter.html
+++ b/usr/share/live-installer/slideshow/l10n/es/appcenter.html
@@ -27,5 +27,5 @@
       </ul>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/software.png" />
+  <img class="screenshot" src="screenshots/appcenter.png" />
 </div>
