--- a/usr/share/live-installer/slideshow/l10n/es/documentation.html
+++ b/usr/share/live-installer/slideshow/l10n/es/documentation.html
@@ -10,5 +10,5 @@
     </ul>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/help.png" />
+  <img class="screenshot" src="screenshots/documentation.png" />
 </div>
