--- a/usr/share/live-installer/slideshow/l10n/fr/about.html
+++ b/usr/share/live-installer/slideshow/l10n/fr/about.html
@@ -6,5 +6,5 @@
       <p>Nous croyons au minimalisme et à la liberté de choix : donc peu d'applications par défaut.</br></br>Bodhi Linux s'appuie sur l'environnement de bureau Moksha pour vous offrir un système léger et élégant, personnalisable à l'envi. Vivez une expérience Linux unique grâce à Moksha !</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
