--- a/usr/share/live-installer/slideshow/l10n/fr/appcenter.html
+++ b/usr/share/live-installer/slideshow/l10n/fr/appcenter.html
@@ -29,5 +29,5 @@
         </ul>
     </div>
   </div>
-<img class="screenshot" src="screenshots/software.png" />
+<img class="screenshot" src="screenshots/appcenter.png" />
 </div>
