--- a/usr/share/live-installer/slideshow/l10n/fr/community.html
+++ b/usr/share/live-installer/slideshow/l10n/fr/community.html
@@ -9,5 +9,5 @@
       </ul>
     </div>
   </div>
-<img class="screenshot" src="screenshots/help.png" />
+<img class="screenshot" src="screenshots/community.png" />
 </div>
