be, ca, cs, de pics links updated

--- a/usr/share/live-installer/slideshow/l10n/be/about.html
+++ b/usr/share/live-installer/slideshow/l10n/be/about.html
@@ -6,5 +6,5 @@
       <p>Мы паслядоўна прытрымліваемся прынцыпаў мінімалізму, таму адразу пасля ўсталявання Bodhi мае толькі самае неабходнае. Усе дадатковыя праграмы можна атрымаць пазней праз &laquo;Цэнтр праграм&raquo; або з дапамогай менеджара пакетаў Synaptic.</br></br>Bodhi Linux выкарыстоўвае лёгкае ды прыгожае графічнае асяроддзе Moksha Desktop, якое кожны здольны наладзіць на свой асабісты густ.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
