--- a/usr/share/live-installer/slideshow/l10n/ca/about.html
+++ b/usr/share/live-installer/slideshow/l10n/ca/about.html
@@ -6,5 +6,5 @@
       <p>Creiem fortament en el minimalisme i que l'usuari pugui triar allò que vol. Per aquesta raó, d'entrada, tan sols hi trobaràs unes poques eines.</br></br>Bodhi Linux fa servir l'entorn de despatx Moksha que proporciona un sistema operatiu lleuger i estètic, que pots ajustar perquè s'assembli exactament com vols tu.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
