--- a/usr/share/live-installer/slideshow/l10n/cs/about.html
+++ b/usr/share/live-installer/slideshow/l10n/cs/about.html
@@ -6,5 +6,5 @@
       <p>Žijeme minimalismem a věříme v možnost pro uživatele, aby si sám zvolil, a proto dostáváte jen několik těch nejzákladnějších nástrojů.</br></br>Bodhi Linux používá desktopové prostředí Moksha, čímž Vám dává odlehčený a krásný operační systém, který si můžete přizpůsobit tak, aby vypadal přesně podle Vašich představ.</p>    
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
