--- a/usr/share/live-installer/slideshow/l10n/de/about.html
+++ b/usr/share/live-installer/slideshow/l10n/de/about.html
@@ -6,5 +6,5 @@
 <p>Wir sind von Minimalismus und der freien Wahl durch den Benutzer überzeugt. </br> </br>Bodhi Linux benutzt die Moksha Desktop-Umgebung, welche ein leichtes und gut aussehendes Betriebssystem bietet, dessen Funktionalität und Aussehen an die eigenen Vorlieben angepasst werden können.</p>
     </div>
   </div>
-  <img class="screenshot" src="screenshots/welcome.png" />
+  <img class="screenshot" src="screenshots/about.png" />
 </div>
