--- a/usr/share/live-installer/slideshow/l10n/be/donations.html
+++ b/usr/share/live-installer/slideshow/l10n/be/donations.html
@@ -10,5 +10,5 @@
       </ul>
     </div>
   </div>
-<img class="screenshot" src="screenshots/help.png" />
+<img class="screenshot" src="screenshots/donations.png" />
 </div>
