--- a/usr/share/live-installer/slideshow/l10n/sk/welcome.html
+++ b/usr/share/live-installer/slideshow/l10n/sk/welcome.html
@@ -1,4 +1,4 @@
-<div class="header"><h1 class="slidetitle">Vitajte v Bodhi Linuxe</h1></div>
+<div class="header"><h1 class="slidetitle">Víta Vás Bodhi Linux</h1></div>
 
 <div class="main">
  <div class="text">
